--- a/charts/harbor-operator/values.yaml
+++ b/charts/harbor-operator/values.yaml
@@ -188,6 +188,8 @@ service:
   # service.port -- Expose port for WebHook controller
   port: 443
 
+imageMutatingWebhookFailurePolicy: Fail
+
 # harborClass -- Class name of the Harbor operator
 harborClass: ""
 
